# multimodal_rag

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  x.ipynb
config/: config.yaml
debug_outputs/: ingest_embed_report_20260209_165127.txt  ingest_embed_report_20260209_170529.txt  rg_report_20260209_183027.txt  rg_report_20260209_231740.txt
index/image_pdfimage/: chroma.sqlite3
index/pdf_image/: chroma.sqlite3
index/text/: chroma.sqlite3
research/: 05.ipynb  final3.ipynb  query.ipynb
scripts/: ingest_all.py  rebuild_index.ipynb
src/multimodal_rag/components/: embed.py  image_embed.py  ingest.py  rag.py  retrieve.py  store.py
src/multimodal_rag/config/: config.py
src/multimodal_rag/logger/: __init__.py
src/multimodal_rag/utils/: common.py
