[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Multimodal RAG system"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pyyaml",
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]
